tests/fail/typeDoesNotExist.llcl
/*
error: value not in scope
9  |fn main(): Int8 {
10 |    var a: notAType = 0;
               ^^^^^^^^ nothing named 'notAType'
11 |
*/

fn main(): Int8 {
	var a: notAType = 0;

	return 0;
}